@@ -8,6 +8,10 @@
 - fix issue251: Require and validate the "X-DEVPI-SERIAL" from master in
   replica thread
 
+- fix issue256: if a project removes all releases from pypi or the project is
+  deleted on pypi, we get a 404 back. In that case we now return an empty list
+  of releases instead of returning an UpstreamError.
+
 
 2.2.2
 -----
